Fix scanner not showing on mobile.

--- a/src/theme/alpha-victor.css
+++ b/src/theme/alpha-victor.css
@@ -903,6 +903,10 @@ body.scanner-active {
   --ion-background-color: transparent;
 }
 
+body.scanner-active #app ion-grid {
+  visibility: hidden !important;
+}
+
 ion-content.transparent::part(scroll) {
   background: none;
 }
